--- a/iOS/Txly.iOS.csproj
+++ b/iOS/Txly.iOS.csproj
@@ -10,6 +10,7 @@
     <RootNamespace>Txly.iOS</RootNamespace>
     <AssemblyName>Txly.iOS</AssemblyName>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhoneSimulator' ">
     <DebugSymbols>true</DebugSymbols>
