Prepare for publish

--- a/iOS/Info.plist
+++ b/iOS/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDisplayName</key>
 	<string>Txly</string>
 	<key>CFBundleName</key>
-	<string>Txly</string>
+	<string>同行再版</string>
 	<key>CFBundleIdentifier</key>
 	<string>net.febchk.Txly</string>
 	<key>CFBundleShortVersionString</key>
