--- a/iOS/Info.plist
+++ b/iOS/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDisplayName</key>
-	<string>Txly</string>
+	<string>同行新版</string>
 	<key>CFBundleIdentifier</key>
 	<string>net.febchk.Txly</string>
 	<key>CFBundleShortVersionString</key>
@@ -19,8 +19,6 @@
 		<integer>1</integer>
 		<integer>2</integer>
 	</array>
-	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
@@ -57,9 +55,11 @@
 	<array>
 		<string>audio</string>
 	</array>
+	<key>CFBundleName</key>
+	<string>同行新版</string>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
 	<key>XSLaunchImageAssets</key>
 	<string>Assets.xcassets/LaunchImage.launchimage</string>
-	<key>CFBundleName</key>
-	<string>Txly</string>
 </dict>
 </plist>
